# p31s

./: .gitignore  LICENSE  README.md  generate_labels.py  print_custom_label.py  print_edge_test.py  print_p31s.py  print_sweep.py  pyproject.toml  test_bitmap_print.py  test_status_commands.py  test_tspl_print.py
.beads/export-state/: 32c4ee8407268c39.json  93fd278f4ca17930.json
.github/workflows/: ci.yml
docs/: protocol.md
src/p31printer/: __init__.py  cli.py  commands.py  connection.py  image.py  printer.py  protocol.py  responses.py  tspl.py  tspl_commands.py
src/p31s/: __init__.py  barcodes.py  cache.py  cli.py  connection.py  coverage.py
src/p31sprinter/: __init__.py  barcodes.py  cli.py  connection.py  image.py  printer.py  responses.py  tspl.py  tspl_commands.py
tests/: __init__.py  conftest.py  test_barcodes.py  test_cache.py  test_cli.py  test_connection.py  test_coverage.py  test_image.py  test_integration.py  test_printer.py  test_protocol.py  test_tspl.py
tools/: apk_uuid_finder.py  discover.py  test_protocols.py
