[project]
name = "p31printer"
version = "0.1.0"
description = "Linux/macOS driver for POLONO P31S label printer"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "P31 Printer Project"}
]
dependencies = [
    "bleak>=0.21.0",
    "pillow>=10.0.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
p31 = "p31printer.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
