[project]
name = "p31sprinter"
version = "0.1.0"
description = "Linux/macOS driver for POLONO P31S label printer"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [
    {name = "P31S Printer Project"}
]
dependencies = [
    "bleak>=0.21.0",
    "pillow>=10.0.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
p31s = "p31sprinter.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
